# openweather-proxy-rs

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: lib.rs  main.rs
src/application/: weather.rs
src/infrastructure/repositories/: cache.rs  weather.rs
src/infrastructure/services/: weather.rs
src/types/: error.rs  mod.rs  open_weather.rs  request.rs  response.rs  state.rs
