[package]
name = "openweather_proxy"
default-run = "openweather_proxy"
version = "0.1.0"
authors = ["Andrea Campana <info@andreacampana.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
openweather-async = "0.1.2"
thiserror = "1.0.25"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
async-trait = "0.1.50"
dotenv_codegen = "0.15.0"
actix-ratelimit = "0.3.1"