[package]
name = "openweather_proxy"
default-run = "openweather_proxy"
version = "0.1.0"
authors = ["Andrea Campana <info@andreacampana.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
truncate_coordinates_decimal = []

[dependencies]
actix-web = "3"
reqwest = { version = "0.10.10", features = ["json"]}
thiserror = "1.0.25"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
async-trait = "0.1.50"
dotenv_codegen = "0.15.0"
actix-ratelimit = "0.3.1"
openweather-async = "0.1.2"
log = "0.4.0"
env_logger = "0.8.4"
r2d2_redis = "0.14.0"
chrono = "0.4.19"
serde-redis = "0.11.0"
redis_rs = "0.9.0"
rust_decimal = "1.15.0"
